--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,12 @@
-flask
-requests
-feedparser
+Flask==2.3.3
+requests==2.31.0
+feedparser==6.0.11
 textblob
-waitress
+waitress==2.1.2
+beautifulsoup4==4.12.2
+tenacity==8.2.3
+apscheduler==3.10.4
+prometheus_client==0.17.1
+sentry-sdk==1.38.0
+transformers==4.36.2
+torch==2.1.2
