--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-Flask==2.3.3
-requests==2.31.0
-feedparser==6.0.11
-textblob
-waitress==2.1.2
-beautifulsoup4==4.12.2
-tenacity==8.2.3
-apscheduler==3.10.4
-prometheus_client==0.17.1
-sentry-sdk==1.38.0
-transformers==4.36.2
-torch==2.1.2
+Flask
+waitress
+APScheduler
+tenacity
+feedparser
+python-dateutil
+beautifulsoup4
+requests
+transformers
+torch
+prometheus-client
+sentry-sdk
+python-json-logger
