--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,5 @@ requests
 prometheus-client
 sentry-sdk
 python-json-logger
-
-# CPU-only PyTorch
-torch==2.0.1+cpu -f https://download.pytorch.org/whl/torch_stable.html
-
-# A reasonably recent Transformers
+torch==2.0.1
 transformers==4.21.0
