--- a/requirements.txt
+++ b/requirements.txt
@@ -9,5 +9,12 @@ requests
 prometheus-client
 sentry-sdk
 python-json-logger
-torch==2.0.1
+
+# Ensure a prebuilt wheel for tokenizers (avoids Rust build)
+tokenizers==0.13.3
+
+# A recent Transformers release compatible with that Tokenizers wheel
 transformers==4.21.0
+
+# CPU-only PyTorch (available on PyPI)
+torch==2.0.1
