--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,10 @@
-Flask==3.1.0
-waitress==3.0.2
-APScheduler==3.11.0
-tenacity==9.1.2
-feedparser==6.0.11
-python-dateutil==2.9.0.post0
-beautifulsoup4==4.13.4
-requests==2.32.3
-transformers==4.51.3
-torch==2.7.0
-prometheus-client==0.21.1
-sentry-sdk==2.27.0
-python-json-logger==3.3.0
+Flask
+waitress
+APScheduler
+tenacity
+feedparser
+beautifulsoup4
+requests
+prometheus-client
+sentry-sdk
+vaderSentiment
