--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-Flask>=2.0
-waitress
-APScheduler
-requests
-feedparser
-vaderSentiment
-tenacity
+Flask==2.3.3
+APScheduler==3.10.4
+feedparser==6.0.11
+requests==2.31.0
+vaderSentiment==3.3.2
+tenacity==8.2.3
+waitress==2.1.2
