--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-Flask==2.3.3
-APScheduler==3.10.4
+Flask==3.1.0
+waitress==3.0.2
+apscheduler==3.11.0
+tenacity==9.1.2
 feedparser==6.0.11
-requests==2.31.0
-vaderSentiment==3.3.2
-tenacity==8.2.3
-waitress==2.1.2
+beautifulsoup4==4.13.4
+requests==2.32.3
