--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Flask==3.1.0
 waitress==3.0.2
-apscheduler==3.11.0
+APScheduler==3.11.0
 tenacity==9.1.2
 feedparser==6.0.11
 beautifulsoup4==4.13.4
