--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ APScheduler==3.11.0
 feedparser==6.0.11
 requests==2.32.3
 vaderSentiment==3.3.2
-tenacity==9.1.2
+tenacity==8.2.3
 waitress==3.0.2
-beautifulsoup4==4.13.4
+yfinance==0.2.37
+python-dotenv==1.0.1
