--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,9 @@ Flask==3.1.0
 APScheduler==3.11.0
 feedparser==6.0.11
 requests==2.32.3
-vaderSentiment==3.3.2
-tenacity==8.2.3
+tenacity==9.1.2
 waitress==3.0.2
-yfinance==0.2.37
 python-dotenv==1.0.1
+vaderSentiment==3.3.2
+yfinance==0.2.38
+beautifulsoup4==4.13.4
