--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,9 @@ requests==2.31.0
 vaderSentiment==3.3.2
 tenacity==8.2.3
 waitress==2.1.2
-beautifulsoup4==4.13.4
-yfinance==0.2.37
 python-dotenv==1.0.1
+yfinance==0.2.37
+beautifulsoup4==4.13.4
+html5lib==1.1
+pandas==2.2.3
+lxml==5.4.0
